--- a/app/templates/settings/organizations/organization.hbs
+++ b/app/templates/settings/organizations/organization.hbs
@@ -13,7 +13,7 @@
       </AuLink>
       <Auk::Toolbar::Item>
         <h4 data-test-settings-header-title class="auk-toolbar-complex__title">
-          {{t "manage-organization" name=this.model.name }}
+          {{t "manage-organization" name=this.model.name}}
         </h4>
       </Auk::Toolbar::Item>
     </Auk::Toolbar::Group>
@@ -22,7 +22,6 @@
     </Auk::Toolbar::Group>
   </Auk::Toolbar>
 </Auk::Navbar>
-
 <div class="auk-u-overflow-hidden">
   <div class="au-o-grid">
     <div class="au-o-grid__item au-u-3-4@medium au-u-2-3@large">
@@ -31,7 +30,10 @@
           <Auk::Panel::Header>
             <AuToolbar class="auk-u-maximize-width" as |Group|>
               <Group>
-                <h4 data-test-route-settings---user-general-info class="auk-panel__title">
+                <h4
+                  data-test-route-settings---user-general-info
+                  class="auk-panel__title"
+                >
                   {{t "manage-users-general-info"}}
                 </h4>
               </Group>
@@ -58,8 +60,12 @@
           <Auk::Panel::Body>
             <dl>
               <div class="auk-key-value-item auk-key-value-item--horizontal">
-                <div class="auk-key-value-item__label">{{t "manage-users-full-name"}}</div>
-                <div class="auk-key-value-item__value au-u-flex au-u-flex--vertical-center au-u-flex--spaced-small">
+                <div class="auk-key-value-item__label">
+                  {{t "manage-users-full-name"}}
+                </div>
+                <div
+                  class="auk-key-value-item__value au-u-flex au-u-flex--vertical-center au-u-flex--spaced-small"
+                >
                   {{this.model.name}}
                 </div>
               </div>
@@ -70,7 +76,10 @@
       <div class="auk-u-m-4 auk-u-mr-2 auk-u-ml-2">
         <Auk::Panel>
           <Auk::Panel::Header>
-            <h4 data-test-route-settings---organisation-technical-info class="auk-panel__title">
+            <h4
+              data-test-route-settings---organisation-technical-info
+              class="auk-panel__title"
+            >
               {{t "linked-mandatees"}}
             </h4>
           </Auk::Panel::Header>
@@ -78,20 +87,30 @@
             <AuTable>
               <:header>
                 <tr>
-                  <th>{{capitalize (t "mandatee")}}</th>
+                  <th>
+                    {{capitalize (t "mandatee")}}
+                  </th>
                   <th></th>
                 </tr>
               </:header>
               <:body>
                 {{#each this.model.mandatees as |mandatee|}}
                   <tr>
-                    <td>{{mandatee.fullDisplayName}}</td>
+                    <td>
+                      {{mandatee.fullDisplayName}}
+                    </td>
                     <td class="au-u-text-right">
                       <AuButton
                         data-test-route-settings---organisation-unlink-mandatee
                         @skin="naked"
                         @icon="circle-full"
-                        {{on "click" (queue (toggle "showUnlinkMandatee" this) (set this "mandateeBeingUnlinked" mandatee))}}
+                        {{on
+                          "click"
+                          (queue
+                            (toggle "showUnlinkMandatee" this)
+                            (set this "mandateeBeingUnlinked" mandatee)
+                          )
+                        }}
                       >
                         {{t "unlink"}}
                       </AuButton>
@@ -100,7 +119,7 @@
                 {{/each}}
                 <tr>
                   <td>
-                   <Mandatees::MandateeSelector
+                    <Mandatees::MandateeSelector
                       @referenceDate={{@referenceDate}}
                       @openSearch={{this.openSearch}}
                       @onSelectMandatee={{fn (mut this.selectedMandatee)}}
@@ -109,13 +128,10 @@
                   </td>
                   <td class="au-u-text-right">
                     {{#if this.selectedMandatee.id}}
-                    <AuButton 
-                      @alert={{true}}
-                      {{on "click" this.linkMandatee}}
-                      >
-                      {{t "connect"}}
-                    </AuButton>
-                {{/if}}
+                      <AuButton {{on "click" this.linkMandatee}}>
+                        {{t "connect"}}
+                      </AuButton>
+                    {{/if}}
                   </td>
                 </tr>
               </:body>
@@ -126,7 +142,6 @@
     </div>
   </div>
 </div>
-
 <AuModal
   @modalOpen={{this.showBlockOrganization}}
   @closeModal={{toggle "showBlockOrganization" this}}
@@ -136,14 +151,16 @@
   </:title>
   <:body>
     <div class="au-o-flow au-o-flow--small">
-      <p>{{t "block-organization-explanation"}}</p>
-      <p>{{t "block-organization-are-you-sure" htmlSafe=true}}</p>
+      <p>
+        {{t "block-organization-explanation"}}
+      </p>
+      <p>
+        {{t "block-organization-are-you-sure" htmlSafe=true}}
+      </p>
     </div>
   </:body>
   <:footer>
-    <AuToolbar
-      as |Group|
-    >
+    <AuToolbar as |Group|>
       <Group>
         <AuButton
           @skin="naked"
@@ -156,7 +173,10 @@
         <AuButton
           data-test-route-settings---organization-confirm-block-organization
           @alert={{true}}
-          {{on "click" (queue this.blockOrganization (toggle "showBlockOrganization" this))}}
+          {{on
+            "click"
+            (queue this.blockOrganization (toggle "showBlockOrganization" this))
+          }}
         >
           {{t "block-organization"}}
         </AuButton>
@@ -164,7 +184,6 @@
     </AuToolbar>
   </:footer>
 </AuModal>
-
 <AuModal
   @modalOpen={{this.showUnblockOrganization}}
   @closeModal={{toggle "showUnblockOrganization" this}}
@@ -174,14 +193,16 @@
   </:title>
   <:body>
     <div class="au-o-flow au-o-flow--small">
-      <p>{{t "unblock-organization-explanation"}}</p>
-      <p>{{t "unblock-organization-are-you-sure" htmlSafe=true}}</p>
+      <p>
+        {{t "unblock-organization-explanation"}}
+      </p>
+      <p>
+        {{t "unblock-organization-are-you-sure" htmlSafe=true}}
+      </p>
     </div>
   </:body>
   <:footer>
-    <AuToolbar
-      as |Group|
-    >
+    <AuToolbar as |Group|>
       <Group>
         <AuButton
           @skin="naked"
@@ -194,7 +215,12 @@
         <AuButton
           data-test-route-settings---organisation-confirm-unblock-organisation
           @alert={{true}}
-          {{on "click" (queue this.unblockOrganization (toggle "showUnblockOrganization" this))}}
+          {{on
+            "click"
+            (queue
+              this.unblockOrganization (toggle "showUnblockOrganization" this)
+            )
+          }}
         >
           {{t "unblock-organization"}}
         </AuButton>
@@ -202,7 +228,6 @@
     </AuToolbar>
   </:footer>
 </AuModal>
-
 <AuModal
   @modalOpen={{this.showUnlinkMandatee}}
   @closeModal={{toggle "showUnlinkMandatee" this}}
@@ -212,13 +237,13 @@
   </:title>
   <:body>
     <div class="au-o-flow au-o-flow--small">
-      <p>{{t "unlink-mandatee-are-you-sure" htmlSafe=true}}</p>
+      <p>
+        {{t "unlink-mandatee-are-you-sure" htmlSafe=true}}
+      </p>
     </div>
   </:body>
   <:footer>
-    <AuToolbar
-      as |Group|
-    >
+    <AuToolbar as |Group|>
       <Group>
         <AuButton
           @skin="naked"
@@ -231,7 +256,10 @@
         <AuButton
           data-test-route-settings---organisation-confirm-unlink-mandatee
           @alert={{true}}
-          {{on "click" (queue this.unlinkMandatee (toggle "showUnlinkMandatee" this))}}
+          {{on
+            "click"
+            (queue this.unlinkMandatee (toggle "showUnlinkMandatee" this))
+          }}
         >
           {{t "unlink-mandatee"}}
         </AuButton>
