KAS-3933 correct label for minister, make selector label hideable

--- a/app/components/mandatees/mandatee-person-selector.hbs
+++ b/app/components/mandatees/mandatee-person-selector.hbs
@@ -1,7 +1,9 @@
 <div class="auk-form-group">
-  <Auk::Label>
-    {{t "ministers"}}
-  </Auk::Label>
+  {{#if @showLabel}}
+    <Auk::Label>
+      {{t "ministers"}}
+    </Auk::Label>
+  {{/if}}
   {{#if this.mandateePersons}}
     {{#if @multiple}}
       <PowerSelectMultiple
