--- a/app/components/publications/overview/reports/generate-report-modal.hbs
+++ b/app/components/publications/overview/reports/generate-report-modal.hbs
@@ -78,6 +78,7 @@
           @onChange={{fn (mut this.selectedMandateePersons)}}
           @dateRange={{this.dateRange}}
           @multiple={{true}}
+          @showLabel={{true}}
         />
       {{/if}}
       {{#if @userInputFields.governmentDomains}}
