feat: add option to hide actions

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -123,10 +123,7 @@
             {{/if}}
           {{/if}}
           {{#if
-              (and
-                @isEditable
-                (user-may "manage-documents")
-              )
+            (and @isEditable (user-may "manage-documents") (not @hideActions))
           }}
             <Group.Item>
               <AuDropdown
