--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -68,18 +68,16 @@
       <Auk::Panel::Body
         class="{{if this.isEditing 'au-u-background-gray-100'}}"
       >
-        <Documents::DocumentCard
-          @piece={{if
-            this.report.file
-            this.report
-            (await this.report.previousPiece)
-          }}
-          @isEditable={{true}}
-          @agendaContext={{@agendaContext}}
-          @hideNewerVersions={{true}}
-          @hideActions={{true}}
-          @bordered={{true}}
-        />
+        {{#if (or this.report.file this.previousPiece)}}
+          <Documents::DocumentCard
+            @piece={{if this.report.file this.report this.previousPiece}}
+            @isEditable={{true}}
+            @agendaContext={{@agendaContext}}
+            @hideNewerVersions={{true}}
+            @hideActions={{true}}
+            @bordered={{true}}
+          />
+        {{/if}}
       </Auk::Panel::Body>
     {{/if}}
   {{/if}}
