--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -43,7 +43,7 @@
                 <p data-test-document-card-primary-source-created={{if this.piece.file.derived ""}}>
                   {{t "uploaded-at"}}
                   {{datetime-at this.piece.created}}
-                  {{#if this.piece.file.derived}}
+                  {{#if (and this.piece.file.derived (await (this.canViewConfidentialPiece)))}}
                     {{t "as"}}
                     <AuLinkExternal
                       data-test-document-card-primary-source-link
