--- a/app/components/documents/document-view.hbs
+++ b/app/components/documents/document-view.hbs
@@ -1,4 +1,4 @@
-{{#if (and @file @mayAccessKabinetDocument)}}
+{{#if (and @file (await (this.canViewConfidentialPiece)))}}
   {{#if this.isPdfDocument}}
     <object
       type="application/pdf"
