--- a/app/components/agenda/agendaitem/decision/editor.hbs
+++ b/app/components/agenda/agendaitem/decision/editor.hbs
@@ -7,21 +7,11 @@
           "update-thing"
           thing=(t "content")
         }}</AuButton>
-      <AuDropdown
-        @title={{t "current-version"}}
-        @alignment="left"
-        @skin="naked"
-        @icon="chevron-down"
-        @iconAlignment="right"
-      >
-        <AuButton @skin="link-secondary" role="menuitem">
-          Versie van 18-11-2022 om 10:23
-        </AuButton>
-        <AuButton @skin="link-secondary" role="menuitem">
-          Versie van 13-11-2022 om 12:13
-        </AuButton>
-      </AuDropdown>
     </div>
+    <Agenda::Agendaitem::Decision::PiecePartVersion
+      @piecePart={{@piecePart}}
+      @onVersionClicked={{@onPiecePartVersionClicked}}
+    />
   </div>
   <WebComponents::VlRdfaEditor
     data-test-newsletter-edit-item-rdfa-editor
