KAS-3944 fix mandatee check with uri

--- a/app/components/documents/document-preview/document-preview-modal.hbs
+++ b/app/components/documents/document-preview/document-preview-modal.hbs
@@ -7,15 +7,17 @@
   <:title>
     <span class="au-u-flex au-u-flex--vertical-center au-u-flex--spaced-small">
       {{this.selectedVersion.name}}
-      {{#if (and this.file (await (this.canViewConfidentialPiece)))}}
-        <AuLinkExternal
-          {{! TODO: AuExternalLink doesn't support @style="button-naked" yet}}
-          @icon="download"
-          @iconAlignment="left"
-          href={{this.file.namedDownloadLink}}
-          download
-        >{{t "download-2"}}</AuLinkExternal>
-      {{/if}}
+      {{#unless this.loadFile.isRunning}}
+        {{#if (and this.file (await (this.canViewConfidentialPiece)))}}
+          <AuLinkExternal
+            {{! TODO: AuExternalLink doesn't support @style="button-naked" yet}}
+            @icon="download"
+            @iconAlignment="left"
+            href={{this.file.namedDownloadLink}}
+            download
+          >{{t "download-2"}}</AuLinkExternal>
+        {{/if}}
+      {{/unless}}
     </span>
   </:title>
   <:body>
@@ -24,7 +26,7 @@
         {{#if this.loadFile.isRunning}}
           <WebComponents::LoadingPage />
         {{else}}
-          <Documents::DocumentView @file={{this.file}} @piece={{@piece}} />
+          <Documents::DocumentView @file={{this.file}} @piece={{this.selectedVersion}} />
         {{/if}}
       </div>
       <div class="auk-panel-layout__sidebar">
