fix: don't allow removal of PM as signer

--- a/app/components/mandatees/checkbox-list.hbs
+++ b/app/components/mandatees/checkbox-list.hbs
@@ -5,6 +5,7 @@
     {{#each this.ministers as |minister|}}
       <AuCheckbox
         @checked={{this.isChecked minister}}
+        @disabled={{includes minister.id @disabledOptions}}
         @onChange={{fn this.toggle minister}}
       >
         {{await (this.getMinisterNameAndTitle minister)}}
