--- a/app/components/signatures/select-ministers-modal.hbs
+++ b/app/components/signatures/select-ministers-modal.hbs
@@ -7,6 +7,7 @@
   <Auk::Modal::Body>
     <Mandatees::CheckboxList
       @selected={{this.selectedMinisters}}
+      @disabledOptions={{@disabledOptions}}
       @onChange={{fn (mut this.selectedMinisters)}}
       @allowPartialMatch={{true}}
     />
