feat: add email modal to add approver emails
This adds a new dependency, inputmask, which is used to validate the
input being an actual email address. This dependency is also used by
ember-appuniversum.

An extra CSS class is also added to ensure that masked inputs have
normal kerning.

--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -434,3 +434,7 @@ $au-button-height: 3.4rem;
     width: calc(33% - 2rem);
   }
 }
+
+.au-c-input--mask-normal-letter-spacing {
+  letter-spacing: inherit;
+}
