--- a/app/components/signatures/create-sign-flow.hbs
+++ b/app/components/signatures/create-sign-flow.hbs
@@ -61,7 +61,11 @@
         </Toolbar.Group>
         <Toolbar.Group @position="right" as |Group|>
           <Group.Item>
-            <AuButton @skin="secondary" @icon="plus">
+            <AuButton
+              @skin="secondary"
+              @icon="plus"
+              {{on "click" (toggle "showApproversModal" this)}}
+            >
               {{t "add"}}
             </AuButton>
           </Group.Item>
@@ -70,10 +74,21 @@
     </Auk::Panel::Header>
     <Auk::Panel::Body class="auk-u-p-0">
       <Auk::List @bordered={{true}}>
-        {{#each this.approvers}}
+        {{#each this.approvers as |approver|}}
           <Auk::List::Item
             class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center"
-          />
+          >
+            {{approver}}
+            <AuButton
+              @skin="naked"
+              @alert={{true}}
+              @hideText={{true}}
+              @icon="trash"
+              {{on "click" (fn this.removeApprover approver)}}
+            >
+              {{t "delete"}}
+            </AuButton>
+          </Auk::List::Item>
         {{else}}
           <Auk::List::Item>
             {{t "no-approvers-selected"}}
@@ -122,6 +137,14 @@
       @selected={{map-by "id" this.signers}}
       @onConfirm={{this.saveSigners.perform}}
       @onCancel={{toggle "showMinisterModal" this}}
+    />
+  {{/if}}
+
+  {{#if this.showApproversModal}}
+    <Signatures::EmailModal
+      @title={{t "add-approval"}}
+      @onConfirm={{this.saveApprover}}
+      @onCancel={{toggle "showApproversModal" this}}
     />
   {{/if}}
 {{/if}}
