--- a/app/components/signatures/create-sign-flow.hbs
+++ b/app/components/signatures/create-sign-flow.hbs
@@ -109,7 +109,11 @@
         </Toolbar.Group>
         <Toolbar.Group @position="right" as |Group|>
           <Group.Item>
-            <AuButton @skin="secondary" @icon="plus">
+            <AuButton
+              @skin="secondary"
+              @icon="plus"
+              {{on "click" (toggle "showNotificationAddressesModal" this)}}
+            >
               {{t "add"}}
             </AuButton>
           </Group.Item>
@@ -118,10 +122,21 @@
     </Auk::Panel::Header>
     <Auk::Panel::Body class="auk-u-p-0">
       <Auk::List @bordered={{true}}>
-        {{#each this.notificationAddresses}}
+        {{#each this.notificationAddresses as |notificationAddress|}}
           <Auk::List::Item
             class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center"
-          />
+          >
+            {{notificationAddress}}
+            <AuButton
+              @skin="naked"
+              @alert={{true}}
+              @hideText={{true}}
+              @icon="trash"
+              {{on "click" (fn this.removeNotificationAddress notificationAddress)}}
+            >
+              {{t "delete"}}
+            </AuButton>
+          </Auk::List::Item>
         {{else}}
           <Auk::List::Item>
             {{t "no-notification-addresses-selected"}}
@@ -145,6 +160,14 @@
       @title={{t "add-approval"}}
       @onConfirm={{this.saveApprover}}
       @onCancel={{toggle "showApproversModal" this}}
+    />
+  {{/if}}
+
+  {{#if this.showNotificationAddressesModal}}
+    <Signatures::EmailModal
+      @title={{t "add-notification"}}
+      @onConfirm={{this.saveNotificationAddress}}
+      @onCancel={{toggle "showNotificationAddressesModal" this}}
     />
   {{/if}}
 {{/if}}
