KAS-4042 Adjust tab component instance to fix inconsistent active state/styling

--- a/app/components/agenda/agenda-header/agenda-tabs.hbs
+++ b/app/components/agenda/agenda-header/agenda-tabs.hbs
@@ -2,6 +2,7 @@
   <Auk::Tab @isHierarchicalBack={{true}} />
   <Auk::Tab
     @route="agenda.agendaitems.index"
+    @current-when="agenda.agendaitems.index" {{!-- NOTE: without explicitly defining `@current-when` the active state seems to be missing in some cases --}}
     @query={{if
       this.currentAgendaItemId
       (hash anchor=this.currentAgendaItemId)
