--- a/app/components/agenda/agendaitem/decision/piece-part-version.hbs
+++ b/app/components/agenda/agendaitem/decision/piece-part-version.hbs
@@ -1,16 +1,23 @@
 {{#if this.previousVersions.value.length}}
   <AuDropdown
-    @title={{t "current-version"}}
+    @title={{this.labelForVersion this.selectedVersion}}
     @alignment="left"
     @skin="naked"
     @icon="chevron-down"
     @iconAlignment="right"
   >
+    <AuButton
+      @skin="link-secondary"
+      role="menuitem"
+      {{on "click" (fn this.onVersionClicked @piecePart)}}
+    >
+      {{t "current-version"}}
+    </AuButton>
     {{#each this.previousVersions.value as |previousVersion|}}
       <AuButton
         @skin="link-secondary"
         role="menuitem"
-        {{on "click" (fn @onVersionClicked previousVersion.value)}}
+        {{on "click" (fn this.onVersionClicked previousVersion)}}
       >
         {{t
           "version-of-date-at-time"
