chore: show warning when a file cannot be signed

--- a/app/components/documents/document-preview/signatures-tab.hbs
+++ b/app/components/documents/document-preview/signatures-tab.hbs
@@ -28,5 +28,13 @@
         </AuButton>
       </Group>
     </AuToolbar>
+  {{else}}
+    <AuAlert
+      @skin="warning"
+      @icon="alert-triangle"
+      @title={{t "cannot-sign"}}
+    >
+      <p>{{t "cannot-sign-message"}}</p>
+    </AuAlert>
   {{/if}}
 </div>
